--- a/build.gradle
+++ b/build.gradle
@@ -16,7 +16,7 @@ plugins {
 }
 
 group = 'me.phantomx.fjetpack.two.reloaded'
-version = '1.2-Beta'
+version = '1.3'
 
 repositories {
     mavenCentral()
