--- a/build.gradle
+++ b/build.gradle
@@ -45,11 +45,11 @@ dependencies {
     //noinspection VulnerableLibrariesLocal
     compileOnly 'org.spigotmc:spigot-api:1.19.3-R0.1-SNAPSHOT'
 
-    compileOnly 'org.projectlombok:lombok:1.18.24'
-    annotationProcessor 'org.projectlombok:lombok:1.18.24'
+    compileOnly 'org.projectlombok:lombok:1.18.34'
+    annotationProcessor 'org.projectlombok:lombok:1.18.34'
 
-    testCompileOnly 'org.projectlombok:lombok:1.18.24'
-    testAnnotationProcessor 'org.projectlombok:lombok:1.18.24'
+    testCompileOnly 'org.projectlombok:lombok:1.18.34'
+    testAnnotationProcessor 'org.projectlombok:lombok:1.18.34'
 }
 
 def targetJavaVersion = 17
@@ -116,3 +116,12 @@ tasks.register('proguard', ProGuardTask) {
 shadowJar {
     relocate 'org.bstats', 'me.phantomx.fjetpack.two.reloaded.fjetpack2reloaded.bstats'
 }
+
+tasks.register('copyJarToPlugins', Copy) {
+    // Specify the output directory
+    into "$projectDir/plugins"
+    // Specify the source JAR file
+    from jar.archiveFile
+}
+
+build.finalizedBy(copyJarToPlugins)
